src/objects/CR_Step_for_Template__c.object
<CustomObject>
    <description>This is CR Step used in CR Step Template.</description>
    <fields>
        <fullName>Alternate_CR_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Step for any Decision Points</description>
        <inlineHelpText>Alternate Step for any Decision Points</inlineHelpText>
        <label>Alternate CR Step</label>
        <referenceTo>CR_Step_for_Template__c</referenceTo>
        <relationshipLabel>CR Step for Templates</relationshipLabel>
        <relationshipName>CR_Step_for_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Step_Template__c</fullName>
        <label>CR Step Template</label>
        <referenceTo>CR_Step_Template__c</referenceTo>
        <relationshipLabel>CR Step for Templates</relationshipLabel>
        <relationshipName>CR_Step_for_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependent_CR_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent CR Step</label>
        <referenceTo>CR_Step_for_Template__c</referenceTo>
        <relationshipLabel>CR Step for Templates (Dependent CR Step)</relationshipLabel>
        <relationshipName>CR_Step_for_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Text__c</fullName>
        <label>Feed Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_CR_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next CR Step</label>
        <referenceTo>CR_Step_for_Template__c</referenceTo>
        <relationshipLabel>CR Step for Templates (Next CR Step)</relationshipLabel>
        <relationshipName>CR_Step_for_Templates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <description>Process Workflow Owner - in the Master Change Process from CSC</description>
        <inlineHelpText>Process Workflow Owner - in the Master Change Process from CSC</inlineHelpText>
        <label>Process Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Step_Description__c</fullName>
        <description>short Description of the Process Step</description>
        <inlineHelpText>short Description of the Process Step</inlineHelpText>
        <label>Process Step Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Step_Name__c</fullName>
        <description>Short Name of the CR Process Step</description>
        <inlineHelpText>Short Name of the CR Process Step</inlineHelpText>
        <label>Process Step Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <description>A Sequence Number denoting the progress of the CR</description>
        <inlineHelpText>A Sequence Number denoting the progress of the CR</inlineHelpText>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Type__c</fullName>
        <description>Each Process Steps can be Activity, Decision Point. Start, Terminal or Data collection point</description>
        <inlineHelpText>Each Process Steps can be Activity, Decision Point. Start, Terminal or Data collection point</inlineHelpText>
        <label>Step Type</label>
        <picklist>
            <picklistValues>
                <fullName>Starting Step</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Step</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminal Step</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection Point</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CR Step for Template</label>
    <nameField>
        <displayFormat>CRP#{00000}</displayFormat>
        <label>CR Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Step for Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>